--- a/backend/scripts/acoustic-brainz/data-processing.ipynb
+++ b/backend/scripts/acoustic-brainz/data-processing.ipynb
@@ -17,21 +17,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "3c56fb1d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import sys\n",
     "import json\n",
-    "import sqlite3\n",
+    "import django\n",
     "import time\n",
-    "from pprint import pprint"
+    "from pprint import pprint\n",
+    "\n",
+    "sys.path.append(os.path.dirname(os.path.dirname(os.path.abspath(os.getcwd()))))\n",
+    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"music_recommendation.settings\")\n",
+    "django.setup()\n",
+    "\n",
+    "from recommend_api.models import Track"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "e6f57b41",
    "metadata": {},
    "outputs": [],
@@ -77,15 +84,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "id": "2d900753",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connecting to DB at:  c:\\src\\CM3070-FP-Music-Recommendation\\backend\\db.sqlite3\n"
+     "ename": "SynchronousOnlyOperation",
+     "evalue": "You cannot call this from an async context - use a thread or sync_to_async.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mSynchronousOnlyOperation\u001b[39m                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m     11\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m files:\n\u001b[32m     12\u001b[39m         json_paths.append(os.path.join(root, name))\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m \u001b[43mTrack\u001b[49m\u001b[43m.\u001b[49m\u001b[43mobjects\u001b[49m\u001b[43m.\u001b[49m\u001b[43mall\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdelete\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\valen\\.virtualenvs\\fp\\Lib\\site-packages\\django\\db\\models\\query.py:1199\u001b[39m, in \u001b[36mQuerySet.delete\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1197\u001b[39m collector = Collector(using=del_query.db, origin=\u001b[38;5;28mself\u001b[39m)\n\u001b[32m   1198\u001b[39m collector.collect(del_query)\n\u001b[32m-> \u001b[39m\u001b[32m1199\u001b[39m num_deleted, num_deleted_per_model = \u001b[43mcollector\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdelete\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1201\u001b[39m \u001b[38;5;66;03m# Clear the result cache, in case this QuerySet gets reused.\u001b[39;00m\n\u001b[32m   1202\u001b[39m \u001b[38;5;28mself\u001b[39m._result_cache = \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\valen\\.virtualenvs\\fp\\Lib\\site-packages\\django\\db\\models\\deletion.py:454\u001b[39m, in \u001b[36mCollector.delete\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    451\u001b[39m         \u001b[38;5;28msetattr\u001b[39m(instance, model._meta.pk.attname, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[32m    452\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m count, {model._meta.label: count}\n\u001b[32m--> \u001b[39m\u001b[32m454\u001b[39m \u001b[43m\u001b[49m\u001b[38;5;28;43;01mwith\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mtransaction\u001b[49m\u001b[43m.\u001b[49m\u001b[43matomic\u001b[49m\u001b[43m(\u001b[49m\u001b[43musing\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43musing\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msavepoint\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m    455\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m# send pre_delete signals\u001b[39;49;00m\n\u001b[32m    456\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mobj\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43minstances_with_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m    457\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mnot\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_meta\u001b[49m\u001b[43m.\u001b[49m\u001b[43mauto_created\u001b[49m\u001b[43m:\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\valen\\.virtualenvs\\fp\\Lib\\site-packages\\django\\db\\transaction.py:198\u001b[39m, in \u001b[36mAtomic.__enter__\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    196\u001b[39m connection.commit_on_exit = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m    197\u001b[39m connection.needs_rollback = \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m198\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[43mconnection\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_autocommit\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[32m    199\u001b[39m     \u001b[38;5;66;03m# Pretend we're already in an atomic block to bypass the code\u001b[39;00m\n\u001b[32m    200\u001b[39m     \u001b[38;5;66;03m# that disables autocommit to enter a transaction, and make a\u001b[39;00m\n\u001b[32m    201\u001b[39m     \u001b[38;5;66;03m# note to deal with this case in __exit__.\u001b[39;00m\n\u001b[32m    202\u001b[39m     connection.in_atomic_block = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m    203\u001b[39m     connection.commit_on_exit = \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\valen\\.virtualenvs\\fp\\Lib\\site-packages\\django\\db\\backends\\base\\base.py:454\u001b[39m, in \u001b[36mBaseDatabaseWrapper.get_autocommit\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    452\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mget_autocommit\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m    453\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Get the autocommit state.\"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m454\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mensure_connection\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    455\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.autocommit\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\valen\\.virtualenvs\\fp\\Lib\\site-packages\\django\\utils\\asyncio.py:24\u001b[39m, in \u001b[36masync_unsafe.<locals>.decorator.<locals>.inner\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m     22\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     23\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os.environ.get(\u001b[33m\"\u001b[39m\u001b[33mDJANGO_ALLOW_ASYNC_UNSAFE\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m---> \u001b[39m\u001b[32m24\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m SynchronousOnlyOperation(message)\n\u001b[32m     25\u001b[39m \u001b[38;5;66;03m# Pass onward.\u001b[39;00m\n\u001b[32m     26\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m func(*args, **kwargs)\n",
+      "\u001b[31mSynchronousOnlyOperation\u001b[39m: You cannot call this from an async context - use a thread or sync_to_async."
      ]
     }
    ],
@@ -103,60 +119,15 @@
     "    for name in files:\n",
     "        json_paths.append(os.path.join(root, name))\n",
     "\n",
-    "db_path = \"../../db.sqlite3\"\n",
-    "print(\"Connecting to DB at: \", os.path.abspath(db_path))\n",
-    "db_conn = sqlite3.connect(db_path)\n",
-    "db_cursor = db_conn.cursor()\n",
-    "\n",
-    "# WARNING! For development only disable safety features to increase speed\n",
-    "# db_cursor.execute(\"PRAGMA journal_mode = OFF\")\n",
-    "# db_cursor.execute(\"PRAGMA synchronous = OFF\")\n",
-    "\n",
-    "try:\n",
-    "    db_cursor.execute(\"DROP TABLE IF EXISTS track\")\n",
-    "    db_cursor.execute(\"\"\"            \n",
-    "    CREATE TABLE IF NOT EXISTS track (\n",
-    "        id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
-    "        artist TEXT,\n",
-    "        album TEXT,\n",
-    "        title TEXT,\n",
-    "        release_date DATE,\n",
-    "        duration REAL,\n",
-    "        genre TEXT,\n",
-    "        danceability REAL,\n",
-    "        aggressiveness REAL,\n",
-    "        happiness REAL,\n",
-    "        sadness REAL,\n",
-    "        relaxedness REAL,\n",
-    "        partyness REAL,\n",
-    "        acousticness REAL,\n",
-    "        electronicness REAL,\n",
-    "        instrumentalness REAL,\n",
-    "        tonality REAL,\n",
-    "        brightness REAL\n",
-    "    )\n",
-    "    \"\"\")\n",
-    "except Exception as e:\n",
-    "    print(\"Error:\", e)\n"
+    "Track.objects.all().delete()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "c64861f2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Will load 100000 records\n",
-      "Finished loading records into memory in 31.82s, now running the SQL inserts.\n",
-      "Inserted 100000 records in 0.36 seconds\n",
-      "DONE\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "records = []\n",
     "start = time.time()\n",
@@ -169,44 +140,20 @@
     "    if features is None:\n",
     "        continue\n",
     "\n",
-    "    records.append((\n",
-    "        features.get('artist'),\n",
-    "        features.get('album'),\n",
-    "        features.get('title'),\n",
-    "        features.get('release_date'),\n",
-    "        features.get('duration'),\n",
-    "        features.get('genre'),\n",
-    "        features.get('danceability'),\n",
-    "        features.get('aggressiveness'),\n",
-    "        features.get('happiness'),\n",
-    "        features.get('sadness'),\n",
-    "        features.get('relaxedness'),\n",
-    "        features.get('partyness'),\n",
-    "        features.get('acousticness'),\n",
-    "        features.get('electronicness'),\n",
-    "        features.get('instrumentalness'),\n",
-    "        features.get('tonality'),\n",
-    "        features.get('brightness'),\n",
-    "    ))\n",
+    "    records.append(Track(**features))\n",
     "\n",
     "end = time.time()\n",
-    "print(f\"Finished loading records into memory in {end - start:.2f}s, now running the SQL inserts.\")\n",
+    "print(f\"Finished loading records into memory in {end - start:.2f}s, now running the ORM inserts.\")\n",
     "\n",
     "start = time.time()\n",
-    "db_cursor.executemany(\"\"\"\n",
-    "    INSERT INTO track (\n",
-    "        artist, album, title, release_date, duration, genre, danceability,\n",
-    "        aggressiveness, happiness, sadness, relaxedness, partyness,\n",
-    "        acousticness, electronicness, instrumentalness, tonality, brightness\n",
-    "    )\n",
-    "    VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)\n",
-    "\"\"\", records)\n",
     "\n",
-    "db_conn.commit()\n",
+    "batch_size = 1000\n",
+    "for i in range(0, len(records), batch_size):\n",
+    "    print(str(i) + '/' + str(len(records)) + ' processed')\n",
+    "    Track.objects.bulk_create(records[i:i+batch_size])\n",
+    "\n",
     "end = time.time()\n",
     "print(f\"Inserted {len(records)} records in {end - start:.2f} seconds\")\n",
-    "\n",
-    "db_conn.close()\n",
     "\n",
     "print(\"DONE\")"
    ]
