--- a/docs/prototype-data-exploration.ipynb
+++ b/docs/prototype-data-exploration.ipynb
@@ -5,7 +5,7 @@
    "id": "302214a9",
    "metadata": {},
    "source": [
-    "# Data Formatting Tasks for Database Creation"
+    "# Data Exploration Tasks for Database Creation"
    ]
   },
   {
