Accept feature weights for recommender

--- a/backend/ingest/data_analysis.ipynb
+++ b/backend/ingest/data_analysis.ipynb
@@ -160,7 +160,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Missing year info: 163350/1921455\n"
+      "Missing year info: 164219/1921455\n"
      ]
     }
    ],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "97d1518e",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
        "        -0.01127707, -0.19673662]], shape=(1921455, 16), dtype=float32)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,6 +234,31 @@
     "\n",
     "feature_matrix = data[\"feature_matrix\"]\n",
     "feature_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "27d53798",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['danceability', 'aggressiveness', 'happiness', 'sadness',\n",
+       "       'relaxedness', 'partyness', 'acousticness', 'electronicness',\n",
+       "       'instrumentalness', 'tonality', 'brightness', 'moods_mirex_1',\n",
+       "       'moods_mirex_2', 'moods_mirex_3', 'moods_mirex_4', 'moods_mirex_5'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"feature_names\"]"
    ]
   }
  ],
